Add blockquote html and relevant semantics (considerations)

--- a/src/epub/text/considerations.xhtml
+++ b/src/epub/text/considerations.xhtml
@@ -52,29 +52,32 @@
 			<p>First of all, languages are by this simplification rendered more prolix, several words having become necessary to express what could have been expressed by a single word before. Thus the words, <i xml:lang="la">Dei</i> and <i xml:lang="la">Deo</i>, in the Latin, sufficiently show, without any addition, what relation the object signified is understood to stand in to the objects expressed by the other words in the sentence. But to express the same relation in English, and in all other modern languages, we must make use of, at least, two words, and say, <em>of God</em>, <em>to God</em>. So far as the declensions are concerned, therefore, the modern languages are much more prolix than the ancient. The difference is still greater with regard to the conjugations. What a Roman expressed by the single word <i xml:lang="la">amavissem</i>, an Englishman is obliged to express by four different words, <em>I should have loved</em>. It is unnecessary to take any pains to show how much this prolixness must enervate the eloquence of all modern languages. How much the beauty of any expression depends upon its conciseness, is well known to those who have any experience in composition.</p>
 			<p>Secondly, this simplification of the principles of languages renders them less agreeable to the ear. The variety of termination in the Greek and Latin, occasioned by their declensions and conjugations, gives a sweetness to their language altogether unknown to ours, and a variety unknown to any other modern language. In point of sweetness, the Italian, perhaps, may surpass the Latin, and almost equal the Greek; but in point of variety, it is greatly inferior to both.</p>
 			<p>Thirdly, this simplification, not only renders the sounds of our language less agreeable to the ear, but it also restrains us from disposing such sounds as we have, in the manner that might be most agreeable. It ties down many words to a particular situation, though they might often be placed in another with much more beauty. In the Greek and Latin, though the adjective and substantive were separated from one another, the correspondence of their terminations still showed their mutual reference, and the separation did not necessarily occasion any sort of confusion. Thus in the first line of Virgil,</p>
-			<div>
-				<div>
+			<blockquote epub:type="z3998:verse" xml:lang="la">
 					<p>Tityre tu patulæ recubans sub tegmine fagi;</p>
-				</div>
-			</div>
-			<p>we easily see that <i xml:lang="la">tu</i> refers to <i xml:lang="la">recubans</i>, and <i xml:lang="la">patulæ</i> to <i xml:lang="la">fagi</i>; though the related words are separated from one another by the intervention of several others; because the terminations, showing the correspondence of their cases, determine their mutual reference. But if we were to translate this line literally into English, and say, <em>Tityrus, thou of spreading reclining under the shade beech</em>, Oedipus himself could not make sense of it; because there is here no difference of termination, to determine which substantive each adjective belongs to. It is the same case with regard to verbs. In Latin the verb may often be placed, without any inconveniency or ambiguity, in any part of the sentence. But in English its place is almost always precisely determined. It must follow the subjective and precede the objective member of the phrase in almost all cases. Thus in Latin whether you say, <i xml:lang="la">Joannem verberavit Robertas</i>, or <i xml:lang="la">Robertas verberavit Joannem</i>, the meaning is precisely the same, and the termination fixes John to be the sufferer in both cases. But in English <em>John beat Robert</em>, and <em>Robert beat John</em>, have by no means the same signification. The place therefore of the three principal members of the phrase is in the English, and for the same reason in the French and Italian languages, almost always precisely determined; whereas in the ancient languages a greater latitude is allowed, and the place of those members is often, in a great measure, indifferent. We must have recourse to Horace, in order to interpret some parts of Milton’s literal translation;</p>
-			<div>
-				<div>
-					<p>Who now enjoys thee credulous all gold,<br/>
-					Who always vacant, always amiable<br/>
-					Hopes thee; of flattering gales<br/>
-					Unmindful</p>
-				</div>
-			</div>
-			<p>are verses which it is impossible to interpret by any rules of our language. There are no rules in our language, by which any man could discover, that, in the first line, <i xml:lang="la">credulous</i> referred to <em>who</em>, and not to <em>thee</em>; or that <em>all gold</em> referred to anything; or, that in the fourth line, <em>unmindful</em>, referred to <em>who</em>, in the second, and not to <em>thee</em> in the third; or, on the contrary, that, in the second line, <em>always vacant</em>, <em>always amiable</em>, referred to <em>thee</em> in the third, and not to <em>who</em> in the same line with it. In the Latin, indeed, all this is abundantly plain. 325</p>
-			<div>
-				<div>
-					<p>Qui nunc te fruitur credulus aureâ,<br/>
-					Qui semper vacuam, semper amabilem<br/>
-					Sperat te; nescius auræ fallacis.</p>
-				</div>
-			</div>
-			<p>Because the terminations in the Latin determine the reference of each adjective to its proper substantive, which it is impossible for anything in the English to do. How much this power of transposing the order of their words must have facilitated the compositions of the ancients, both in verse and prose, can hardly be imagined. That it must greatly have facilitated their versification it is needless to observe; and in prose, whatever beauty depends upon the arrangement and construction of the several members of the period, must to them have been acquirable with much more ease, and to much greater perfection than it can be to those whose expression is constantly confined by the prolixness, constraint, and monotony of modern languages.</p>
+			</blockquote>
+			<p class="continued">we easily see that <i xml:lang="la">tu</i> refers to <i xml:lang="la">recubans</i>, and <i xml:lang="la">patulæ</i> to <i xml:lang="la">fagi</i>; though the related words are separated from one another by the intervention of several others; because the terminations, showing the correspondence of their cases, determine their mutual reference. But if we were to translate this line literally into English, and say, <em>Tityrus, thou of spreading reclining under the shade beech</em>, Oedipus himself could not make sense of it; because there is here no difference of termination, to determine which substantive each adjective belongs to. It is the same case with regard to verbs. In Latin the verb may often be placed, without any inconveniency or ambiguity, in any part of the sentence. But in English its place is almost always precisely determined. It must follow the subjective and precede the objective member of the phrase in almost all cases. Thus in Latin whether you say, <i xml:lang="la">Joannem verberavit Robertas</i>, or <i xml:lang="la">Robertas verberavit Joannem</i>, the meaning is precisely the same, and the termination fixes John to be the sufferer in both cases. But in English <em>John beat Robert</em>, and <em>Robert beat John</em>, have by no means the same signification. The place therefore of the three principal members of the phrase is in the English, and for the same reason in the French and Italian languages, almost always precisely determined; whereas in the ancient languages a greater latitude is allowed, and the place of those members is often, in a great measure, indifferent. We must have recourse to Horace, in order to interpret some parts of Milton’s literal translation;</p>
+			<blockquote epub:type="z3998:verse">
+					<p>
+						<span>Who now enjoys thee credulous all gold,</span>
+						<br/>
+						<span>Who always vacant, always amiable</span>
+						<br/>
+						<span>Hopes thee; of flattering gales</span>
+						<br/>
+						<span>Unmindful</span>
+					</p>
+			</blockquote>
+			<p class="continued">are verses which it is impossible to interpret by any rules of our language. There are no rules in our language, by which any man could discover, that, in the first line, <i xml:lang="la">credulous</i> referred to <em>who</em>, and not to <em>thee</em>; or that <em>all gold</em> referred to anything; or, that in the fourth line, <em>unmindful</em>, referred to <em>who</em>, in the second, and not to <em>thee</em> in the third; or, on the contrary, that, in the second line, <em>always vacant</em>, <em>always amiable</em>, referred to <em>thee</em> in the third, and not to <em>who</em> in the same line with it. In the Latin, indeed, all this is abundantly plain. 325</p>
+			<blockquote epub:type="z3998:verse" xml:lang="la">
+				<p>
+					<span>Qui nunc te fruitur credulus aureâ,</span>
+					<br/>
+					<span>Qui semper vacuam, semper amabilem</span>
+					<br/>
+					<span>Sperat te; nescius auræ fallacis.</span>
+				</p>
+			</blockquote>
+			<p class="continued">Because the terminations in the Latin determine the reference of each adjective to its proper substantive, which it is impossible for anything in the English to do. How much this power of transposing the order of their words must have facilitated the compositions of the ancients, both in verse and prose, can hardly be imagined. That it must greatly have facilitated their versification it is needless to observe; and in prose, whatever beauty depends upon the arrangement and construction of the several members of the period, must to them have been acquirable with much more ease, and to much greater perfection than it can be to those whose expression is constantly confined by the prolixness, constraint, and monotony of modern languages.</p>
 		</section>
 	</body>
 </html>
