Remove lingering page number from PG text (considerations)

--- a/src/epub/text/considerations.xhtml
+++ b/src/epub/text/considerations.xhtml
@@ -67,7 +67,7 @@
 						<span>Unmindful</span>
 					</p>
 			</blockquote>
-			<p class="continued">are verses which it is impossible to interpret by any rules of our language. There are no rules in our language, by which any man could discover, that, in the first line, <i xml:lang="la">credulous</i> referred to <em>who</em>, and not to <em>thee</em>; or that <em>all gold</em> referred to anything; or, that in the fourth line, <em>unmindful</em>, referred to <em>who</em>, in the second, and not to <em>thee</em> in the third; or, on the contrary, that, in the second line, <em>always vacant</em>, <em>always amiable</em>, referred to <em>thee</em> in the third, and not to <em>who</em> in the same line with it. In the Latin, indeed, all this is abundantly plain. 325</p>
+			<p class="continued">are verses which it is impossible to interpret by any rules of our language. There are no rules in our language, by which any man could discover, that, in the first line, <i xml:lang="la">credulous</i> referred to <em>who</em>, and not to <em>thee</em>; or that <em>all gold</em> referred to anything; or, that in the fourth line, <em>unmindful</em>, referred to <em>who</em>, in the second, and not to <em>thee</em> in the third; or, on the contrary, that, in the second line, <em>always vacant</em>, <em>always amiable</em>, referred to <em>thee</em> in the third, and not to <em>who</em> in the same line with it. In the Latin, indeed, all this is abundantly plain.</p>
 			<blockquote epub:type="z3998:verse" xml:lang="la">
 				<p>
 					<span>Qui nunc te fruitur credulus aureâ,</span>
