--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -21,10 +21,10 @@
 				</li>
 				<li id="note-3" epub:type="endnote">
 					<p><i xml:lang="fr">Vous y grillez sage et docte Platon,<br/>
-					Divin Homere, eloquent Ciceron, <abbr>etc.</abbr></i> <em>See</em> Voltaire. <a href="chapter-3-2.xhtml#noteref-3" epub:type="backlink">↩</a></p>
+					Divin Homere, eloquent Ciceron, <abbr>etc.</abbr></i> <cite>See Voltaire</cite>. <a href="chapter-3-2.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p>“Ah! little think the gay licentious proud,” <abbr class="eoc">etc.</abbr> See Thomson’s Seasons, Winter. See also Pascal. <a href="chapter-3-3.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>“Ah! little think the gay licentious proud,” <abbr class="eoc">etc.</abbr> <cite>See Thomson’s Seasons, Winter</cite>. See also Pascal. <a href="chapter-3-3.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
 					<p>See Robertson’s Charles <span epub:type="z3998:roman">V</span>. <abbr>vol.</abbr> <span epub:type="z3998:roman">ii</span>. <abbr>pp.</abbr> 14 and 15, first edit. <a href="chapter-3-3.xhtml#noteref-5" epub:type="backlink">↩</a></p>
