[Editorial] Consistent capitalization for non-English book title across book

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -33,7 +33,7 @@
 					<p>The distributive justice of Aristotle is somewhat different. It consists in the proper distribution of rewards from the public stock of a community. See Aristotle <i epub:type="se:name.publication.book">Ethic. Nic.</i> 1. 5. <abbr>c.</abbr> 2. <a href="chapter-7-2-1.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-7" epub:type="endnote">
-					<p>See Cicero <i epub:type="se:name.publication.book" xml:lang="la">de finibus</i>, <abbr>lib.</abbr> <span epub:type="z3998:roman">iii</span>; also Diogenes Laertius in <i epub:type="se:name.publication.book">Zenone</i>, <abbr>lib.</abbr> <span epub:type="z3998:roman">vii</span> segment 84. <a href="chapter-7-2-1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
+					<p>See Cicero <i epub:type="se:name.publication.book" xml:lang="la">De finibus</i>, <abbr>lib.</abbr> <span epub:type="z3998:roman">iii</span>; also Diogenes Laertius in <i epub:type="se:name.publication.book">Zenone</i>, <abbr>lib.</abbr> <span epub:type="z3998:roman">vii</span> segment 84. <a href="chapter-7-2-1.xhtml#noteref-7" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-8" epub:type="endnote">
 					<p><i epub:type="se:name.publication.book">Inquiry Concerning Virtue</i>, <abbr>sect.</abbr> 2. <abbr>art.</abbr> 4.; also <i epub:type="se:name.publication.book">Illustrations on the Moral Sense</i>, <abbr>sect.</abbr> 5, last paragraph. <a href="chapter-7-2-3.xhtml#noteref-8" epub:type="backlink">↩</a></p>
